# OOP_1141

shapes/: CMakeLists.txt  FEATURES.md
shapes/src/: circle.cpp  circle.h  point.cpp  point.h  triangle.cpp  triangle.h
shapes/tests/: dummy_test.cpp  shapes_test.cpp
